--- a/templates/Talleres.html
+++ b/templates/Talleres.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul class="navigation hide">
                     <li>
-                        <a href="../templates/inicio.html" title="Inicio">
+                        <a href="../templates/inicio sin btn.html" title="Inicio">
                             Inicio
                         </a>
                     </li>
