--- a/templates/registro.html
+++ b/templates/registro.html
@@ -69,7 +69,7 @@
         <!-- Formulario de registro -->
         <form id="register-form" method="post">
             <!-- Etiqueta y campo de texto para ingresar el nombre -->
-            <label class="input-label" for="nombre">Ingresa tu nombre</label>
+            <label class="input-label" for="nombre">Ingresa tu nombre y apellido</label>
             <input type="text" id="nombre" name="nombre" required><br>
             <!-- Etiqueta y campo de texto para ingresar el DNI -->
             <label class="input-label" for="dni">Ingresa tu DNI</label>
@@ -83,29 +83,33 @@
             <!-- Etiqueta y menú desplegable para seleccionar la facultad -->
             <label class="input-label" for="facultad">Ingresa tu Facultad</label>
             <select id="facultad" name="facultad">
-                <option value="opcion 1">Seleccione una facultad</option>
-                <option value="opcion 2">Facultad de
+                <option value="Seleccione una facultad">Seleccione una facultad</option>
+                <option value="Facultad de
+                Administración">Facultad de
                     Administración</option>
-                <option value="opcion 3">Facultad de Ciencias Económicas</option>
-                <option value="opcion 4">Facultad de Ciencias Financieras y Contables</option>
-                <option value="opcion 5">Facultad de Ciencias
+                <option value="Facultad de Ciencias Económicas">Facultad de Ciencias Económicas</option>
+                <option value="Facultad de Ciencias Financieras y Contables">Facultad de Ciencias Financieras y Contables</option>
+                <option value="Facultad de Ciencias
+                Sociale">Facultad de Ciencias
                     Sociales</option>
-                <option value="opcion 6">Facultad de Derecho y Ciencia Política
+                <option value="Facultad de Derecho y Ciencia Política">Facultad de Derecho y Ciencia Política
                 </option>
-                <option value="opcion 7">Facultad de
+                <option value="Facultad de
+                Educación">Facultad de
                     Educación</option>
-                <option value="opcion 8">Facultad de Humanidades</option>
-                <option value="opcion 9">Facultad de Ingeniería Geográfica, Ambiental y Ecoturismo</option>
-                <option value="opcion 10">Facultad de Oceanografía, Pesquería, Ciencias Alimentarias y Acuicultura
+                <option value="Facultad de Humanidades">Facultad de Humanidades</option>
+                <option value="Facultad de Ingeniería Geográfica, Ambiental y Ecoturismo">Facultad de Ingeniería Geográfica, Ambiental y Ecoturismo</option>
+                <option value="Facultad de Oceanografía, Pesquería, Ciencias Alimentarias y Acuicultura">Facultad de Oceanografía, Pesquería, Ciencias Alimentarias y Acuicultura
                 </option>
-                <option value="opcion 11">Facultad de Ingeniería Electrónica e Informática
+                <option value="Facultad de Ingeniería Electrónica e Informática">Facultad de Ingeniería Electrónica e Informática
                 </option>
-                <option value="opcion 12">Facultad de Ciencias Naturales y Matemática</option>
-                <option value="opcion 13">Facultad de Medicina "Hipólito Unanue"</option>
-                <option value="opcion 14">Facultad de
+                <option value="Facultad de Ciencias Naturales y Matemática">Facultad de Ciencias Naturales y Matemática</option>
+                <option value="Facultad de Medicina "Hipólito Unanue">Facultad de Medicina "Hipólito Unanue"</option>
+                <option value="Facultad de
+                Odontología">Facultad de
                     Odontología</option>
-                <option value="opcion 15">Facultad de Tecnología Médica</option>
-                <option value="opcion 16">Facultad de Psicología</option>
+                <option value="Facultad de Tecnología Médica">Facultad de Tecnología Médica</option>
+                <option value="Facultad de Psicología">Facultad de Psicología</option>
                 </option>
                 
             </select><br>
