--- a/templates/seminario.html
+++ b/templates/seminario.html
@@ -30,7 +30,7 @@
             <h4>Menu Principal</h4>
             <li>
                 <i class="fas fa-home"></i> <!-- Se corrigió la clase de los iconos -->
-                <a href="../templates/inicio.html">Inicio</a>
+                <a href="../templates/inicio sin btn.html">Inicio</a>
             </li>
             <li>
                 <i class="far fa-calendar"></i>
