--- a/templates/calendario.html
+++ b/templates/calendario.html
@@ -28,7 +28,7 @@
             <h4>Menu Principal</h4>
             <li>
                 <i class="fas fa-home"></i> <!-- Se corrigió la clase de los iconos -->
-                <a href="#">Inicio</a>
+                <a href="inicio sin btn.html">Inicio</a>
             </li>
             <li>
                 <i class="far fa-calendar"></i>
