--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../Estilo/Iconos.css">
     <link rel="stylesheet" href="../Estilo/botones-inicio.css">
+    <link rel="stylesheet" href="../Estilo/Imagenes-movimiento.css">
 </head>
 
 <body>
@@ -41,25 +42,85 @@
             </li>
             <li>
                 <i class="fas fa-futbol"></i>
-                <a href="./Deporte.html">Deportes</a>
+                <a href="../templates/login.html">Deportes</a>
             </li>
             <li>
                 <i class="fas fa-users"></i></i>
-                <a href="./seminario.html">Seminarios</a>
+                <a href="../templates/login.html">Seminarios</a>
             </li>
             <li>
                 <i class="far fa-calendar-alt"></i>
-                <a href="./eventos.html">Eventos</a>
+                <a href="../templates/login.html">Eventos</a>
             </li>
             <li>
                 <i class="fas fa-comments"></i>
-                <a href="./Conferencias.html">Conferencia</a>
+                <a href="../templates/login.html">Conferencia</a>
             </li>
             <li>
                 <i class="fas fa-tools"></i>
-                <a href="./Talleres.html">Talleres</a>
+                <a href="../templates/login.html">Talleres</a>
             </li>
     </aside>
+<!-- Secuencia de imágenes -->
+<div class="slideshow-container">
+    <div class="mySlides fade">
+        <img src="/Imagenes/capi.png" alt="imagen1">
+    </div>
+    <div class="mySlides fade">
+        <img src="/Imagenes/Willy.png" alt="imagen2">
+    </div>
+    <div class="mySlides fade">
+        <img src="/Imagenes/willypavo.png" alt="imagen3">
+    </div>
+    <div class="mySlides fade">
+        <img src="/Imagenes/willy-dylan.jpeg" alt="imagen4">
+    </div>
+</div>
+
+<!-- JavaScript para la presentación de diapositivas -->
+<script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none"; // Ocultar todas las diapositivas
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) { slideIndex = 1 }
+        slides[slideIndex - 1].style.display = "block"; // Mostrar la diapositiva actual
+        setTimeout(showSlides, 30000); // Cambia este valor para ajustar el tiempo entre diapositivas
+    }
+</script>
+</div>
+    <!-- Sección para las notificaciones (incluido el video de YouTube) -->
+    <div class="video-container">
+        <div id="player"></div>
+    </div>
+
+    <script>
+        function onYouTubeIframeAPIReady() {
+            new YT.Player('player', {
+                height: '315',
+                width: '560',
+                videoId: 'ECwBY-1WdZg', // Reemplaza 'VIDEO_ID' con el ID de tu video
+                playerVars: {
+                    'autoplay': 1,
+                    'controls': 1,
+                    'loop': 1,
+                    'mute': 0,
+                    'rel': 0,
+                    'showinfo': 0,
+                    'modestbranding': 1
+                }
+            });
+        }
+    </script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+</body>
+<script src="/Scripst/imagenes-mov.js"></script>
 </body>
 
 </html>
