--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -33,7 +33,7 @@
             </li>
             <li>
                 <i class="far fa-calendar"></i>
-                <a href="./calendario.html">Calendario</a>
+                <a href="/templates/calendario.html">Calendario</a>
             </li>
             <h4>Universidad</h4>
             <li>
