--- a/templates/seminario.html
+++ b/templates/seminario.html
@@ -34,7 +34,7 @@
             </li>
             <li>
                 <i class="far fa-calendar"></i>
-                <a href="#">Calendario</a>
+                <a href="/templates/calendario.html">Calendario</a>
             </li>
             <h4>Universidad</h4>
             <li>
