--- a/templates/inicio sin btn.html
+++ b/templates/inicio sin btn.html
@@ -72,16 +72,22 @@
         <!-- Secuencia de imágenes -->
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="/Imagenes/capi.png" alt="imagen1">
+                <img src="/Imagenes/foto1.jpg" alt="imagen1">
             </div>
             <div class="mySlides fade">
-                <img src="/Imagenes/Willy.png" alt="imagen2">
+                <img src="/Imagenes/foto2.png" alt="imagen2">
             </div>
             <div class="mySlides fade">
-                <img src="/Imagenes/willypavo.png" alt="imagen3">
+                <img src="/Imagenes/foto3.png" alt="imagen3">
             </div>
             <div class="mySlides fade">
-                <img src="/Imagenes/willy-dylan.jpeg" alt="imagen4">
+                <img src="/Imagenes/foto4.png" alt="imagen4">
+            </div>
+            <div class="mySlides fade">
+                <img src="/Imagenes/foto5.png" alt="imagen5">
+            </div>
+            <div class="mySlides fade">
+                <img src="/Imagenes/foto6.jpg" alt="imagen6">
             </div>
         </div>
     
